Issue 10: missing the INSTALL changes in the last commit
git-svn-id: http://greyhole.googlecode.com/svn/trunk@24 b36e06b6-ea79-11de-95aa-47033305a456

--- a/INSTALL
+++ b/INSTALL
@@ -65,12 +65,7 @@ Note: I tried using Ubuntu 9.10 first, but had bad experiences with the CIFS ser
 	Edit /etc/samba/smb.conf
 	Change or add the following values in the [global] section:
 
-		log file = /var/log/samba/samba.log
-		max log size = 0
-		syslog = 0
-		follow symlinks = yes
-		wide links = yes
-		log level = 0 vfs:2
+		unix extensions = no
 
 	For each of your shares, add a 'dfree command' and 'vfs objects' lines, as seen below.
 
