--- a/INSTALL
+++ b/INSTALL
@@ -8,8 +8,8 @@ Note: I tried using Ubuntu 9.10 first, but had bad experiences with the CIFS ser
 
 1. Install the required applications: PHP 5 (cli) with MySQL extension, MySQL server, Samba, GCC:
 
-	Fedora: sudo yum install mysql-server php php-mysql samba samba-common patch gcc rsyslog yum-utils
-	Ubuntu: sudo apt-get install mysql-server php5-cli php5-mysql samba samba-common samba-common-bin build-essential
+	Fedora: sudo yum install mysql-server php php-mysql samba samba-common patch gcc rsyslog yum-utils php-pear
+	Ubuntu: sudo apt-get install mysql-server php5-cli php5-mysql samba samba-common samba-common-bin build-essential php-pear
 
 2. Install Greyhole (as root):
 
