--- a/INSTALL
+++ b/INSTALL
@@ -40,6 +40,7 @@ Note: I tried using Ubuntu 9.10 first, but had bad experiences with the CIFS ser
 }
 
 4. We need to compile our own VFS module. You'll just need to compile vfs_greyhole.c, and install it.
+   Or you can use the .so files found in the samba-module/bin/ directory that was included with Greyhole.
 
 	Fedora:
 	yumdownloader --source samba
@@ -89,10 +90,6 @@ Note: I tried using Ubuntu 9.10 first, but had bad experiences with the CIFS ser
 		    dfree command = /usr/bin/greyhole-dfree
 		    vfs objects = greyhole
 
-	Note 1:
-		/path/to/ will be the value of your Landing Zone in Greyhole configuration file (later).
-		All your shares needs to be subdirectories of that folder, and have no space in their names.
-
 	Fedora: sudo service smb restart
 	Ubuntu: sudo /etc/init.d/samba restart
 
@@ -121,10 +118,9 @@ Note: I tried using Ubuntu 9.10 first, but had bad experiences with the CIFS ser
 	Fedora: sudo chkconfig --add greyhole; sudo chkconfig greyhole on
 	Ubuntu: sudo update-rc.d greyhole defaults 98 20
 
-10. Work around problems with the CIFS client; edit /etc/rc.local:
+10. Work around problems with the CIFS client:
+    Ref: http://blog.dhampir.no/content/cifs-vfs-no-response-for-cmd-n-mid
 
-	# cifs client workaround
-	# Ref: http://blog.dhampir.no/content/cifs-vfs-no-response-for-cmd-n-mid
 	modprobe cifs
 	echo 0 > /proc/fs/cifs/OplockEnabled
 
@@ -138,4 +134,4 @@ Check for errors in the Greyhole log file: /var/log/greyhole.log
 
 
 If you use any application that needs to use files on your shares, you'll need to mount the shares locally, and point those applications to those mounts.
-You should not touch the files in your storage pool directories, or in your landing zone.
+You should not touch the files in your storage pool directories.
