--- a/INSTALL
+++ b/INSTALL
@@ -93,10 +93,16 @@ Note: I tried using Ubuntu 9.10 first, but had bad experiences with the CIFS ser
 	Fedora: sudo service smb restart
 	Ubuntu: sudo /etc/init.d/samba restart
 
-6. Setup the MySQL database:
+6. Setup the database:
 
-	mysql -u root -p -e "create database greyhole; grant all on greyhole.* to greyhole_user@localhost identified by '89y63jdwe';"
-	mysql -u greyhole_user -p89y63jdwe greyhole < ${GREYHOLE_INSTALL_DIR}/mysql.sql
+	If using MySQL:
+
+		mysql -u root -p -e "create database greyhole; grant all on greyhole.* to greyhole_user@localhost identified by '89y63jdwe';"
+		mysql -u greyhole_user -p89y63jdwe greyhole < ${GREYHOLE_INSTALL_DIR}/schema-mysql.sql
+
+	If using SQLite:
+
+		sqlite -u /var/cache/greyhole.db < ${GREYHOLE_INSTALL_DIR}/schema-sqlite.sql
 
 7. Cutomize the Greyhole configuration file:
 
